--- a/src/styles/gigspreview.css
+++ b/src/styles/gigspreview.css
@@ -106,7 +106,7 @@
     }
 
     #event-header{
-        margin: 180px auto 0 auto;
+        margin: 420px auto -100px auto;
     }
 
     .event-details{
